Fixed big images being displayed too large

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -13,6 +13,6 @@ body {
 }
 
 .output {
-  max-width: 100%;
-  max-height: 100%;
+  max-height: 15em;
+  max-width: 15em;
 }
